--- a/detail-sonyxb13.html
+++ b/detail-sonyxb13.html
@@ -13,7 +13,7 @@
       
 	  <nav>
          <ul>
-         <li><a href="home.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
             <li><a href="profil.html">Profil</a></li>
           <li>
             <a href="#">Produk</a>
@@ -59,7 +59,7 @@
         <li>Tahan air dan debu (IP67)</li>
         <li>Ringkas dan portabel</li>
       </ul>
-      <a href="home.html" class="btn">Kembali</a>
+      <a href="index.html" class="btn">Kembali</a>
     </div>
   </div>
 </body>
