--- a/detail.html
+++ b/detail.html
@@ -14,10 +14,10 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="home.html" class="header-logo">SPEAKER <span>STORE</span></a>
+            <a href="index.html" class="header-logo">SPEAKER <span>STORE</span></a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="profil.html">Profil</a></li>
                     <li><a href="#">Produk <i class="fas fa-chevron-down"></i></a>
                         <ul>
