--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <header class="main-header">
         <div class="container">
-            <a href="home.html" class="header-logo">
+            <a href="index.html" class="header-logo">
                 SPEAKER <span>STORE</span>
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="home.html" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="profil.html">Profil</a></li>
                     <li><a href="#">Produk <i class="fas fa-chevron-down"></i></a>
                         <ul>
@@ -157,7 +157,7 @@
                 <div class="footer-column">
                     <h4>Navigasi Cepat</h4>
                     <ul>
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="profil.html">Profil</a></li>
                         <li><a href="kredit.html">Kredit</a></li>
                         <li><a href="service.html">Service Center</a></li>
