--- a/mitra.html
+++ b/mitra.html
@@ -13,7 +13,7 @@
       
 	  <nav>
          <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="profil.html">Profil</a></li>
           <li>
             <a href="#">Produk</a>
