--- a/index.html
+++ b/index.html
@@ -29,17 +29,20 @@
                             <li><a href="wilson audio.html">WILSON AUDIO</a></li>
                         </ul>
                     </li>
+                    <li><a href="mitra.html">Mitra</a></li>
+                    <li><a href="kredit.html">Kredit</a></li>
+                    <li><a href="service.html">Service Center</a></li>
                     <li><a href="kontak.html">Kontak Kami</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
-    <form class="search-box" id="search-form">
-        <input type="search" id="search-input" placeholder="Cari produk..." required>
-        <button type="submit"><i class="fas fa-search"></i></button>
-    </form>
-</div>
+                <form class="search-box" id="search-form">
+                    <input type="search" id="search-input" placeholder="Cari produk..." required>
+                    <button type="submit"><i class="fas fa-search"></i></button>
+                </form>
+            </div>
         </div>
-</header>
+    </header>
 
     <main>
         <section class="slider-section">
@@ -62,7 +65,6 @@
             </div>
         </section>
     
-    <main>
         <section class="categories-section">
             <div class="container">
                 <h2 class="section-title">Jelajahi Kategori</h2>
