--- a/kontak.html
+++ b/kontak.html
@@ -27,6 +27,9 @@
                             <li><a href="wilson audio.html">WILSON AUDIO</a></li>
                         </ul>
                     </li>
+                    <li><a href="mitra.html">Mitra</a></li>
+                    <li><a href="kredit.html">Kredit</a></li>
+                    <li><a href="service.html">Service Center</a></li>
                     <li><a href="kontak.html" class="active">Kontak Kami</a></li>
                 </ul>
             </nav>
@@ -35,10 +38,6 @@
                     <input type="search" id="search-input" placeholder="Cari produk..." required>
                     <button type="submit"><i class="fas fa-search"></i></button>
                 </form>
-                <a href="#" class="cart-icon">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-badge">3</span>
-                </a>
             </div>
         </div>
     </header>
@@ -78,7 +77,7 @@
                  <h2 class="section-title">Temukan Lokasi Kami</h2>
                 <div class="map-container">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.576856987483!2d106.82453407475114!3d-6.187315993800262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f4353a2ed7a3%3A0x1b4020a131b79659!2sMonumen%20Nasional!5e0!3m2!1sid!2sid!4v1694000000000!5m2!1sid!2sid" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15866.66636034988!2d106.8194449074838!3d-6.1753923955092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d2e764b12d%3A0x3d2c6bf7b4a44b7c!2sMonumen%20Nasional!5e0!3m2!1sid!2sid!4v1668393310344!5m2!1sid!2sid" 
                         width="100%" 
                         height="100%" 
                         style="border:0;" 
@@ -119,7 +118,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Copyright © 2025 by STORE SPEAKER | All Rights Reserved</p>
+                <p>Copyright &copy; 2025 by STORE SPEAKER | All Rights Reserved</p>
             </div>
         </div>
     </footer>
