--- a/polytron.html
+++ b/polytron.html
@@ -27,16 +27,17 @@
                             <li><a href="wilson audio.html">WILSON AUDIO</a></li>
                         </ul>
                     </li>
+                    <li><a href="mitra.html">Mitra</a></li>
+                    <li><a href="kredit.html">Kredit</a></li>
+                    <li><a href="service.html">Service Center</a></li>
                     <li><a href="kontak.html">Kontak Kami</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
-    <form class="search-box" id="search-form">
-        <input type="search" id="search-input" placeholder="Cari produk..." required>
-        <button type="submit"><i class="fas fa-search"></i></button>
-    </form>
-    
-                
+                <form class="search-box" id="search-form">
+                    <input type="search" id="search-input" placeholder="Cari produk..." required>
+                    <button type="submit"><i class="fas fa-search"></i></button>
+                </form>
             </div>
         </div>
     </header>
@@ -56,7 +57,36 @@
     </main>
 
     <footer class="main-footer">
-        </footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-column">
+                    <h4>SPEAKER <span>STORE</span></h4>
+                    <p>Pusat speaker audio berkualitas dengan garansi resmi dan layanan purna jual terbaik.</p>
+                </div>
+                <div class="footer-column">
+                    <h4>Navigasi Cepat</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="profil.html">Profil</a></li>
+                        <li><a href="kredit.html">Kredit</a></li>
+                        <li><a href="service.html">Service Center</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Ikuti Kami</h4>
+                    <div class="social-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>Copyright &copy; 2025 by STORE SPEAKER | All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 
     <script src="assets/js/produk.js"></script>
     <script>
